public/stylesheets/darkblog.css
/* Theme Name: darkhax
 * Theme URI: http://blog.darkhax.com
 * Description: A custom theme for blog.darkhax.com
 * Version: 1.0
 * Author: Daniel Huckstep
 * Author URI: http://www.darkhax.com
 * Tags: contrast, ajax, widget-ready
 */
/* reset.css */

html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}:focus{outline:0}ins{text-decoration:none}del{text-decoration:line-through}table{border-collapse:collapse;border-spacing:0}

/* end reset.css */

/* text.css */

body{font:13px/1.5 Helvetica,Arial,'Liberation Sans',FreeSans,sans-serif}a:focus{outline:1px dotted invert}hr{border:0 #ccc solid;border-top-width:1px;clear:both;height:0}h1{font-size:25px}h2{font-size:23px}h3{font-size:21px}h4{font-size:19px}h5{font-size:17px}h6{font-size:15px}ol{list-style:decimal}ul{list-style:square}li{margin-left:30px}p,dl,hr,h1,h2,h3,h4,h5,h6,ol,ul,pre,table,address,fieldset{margin-bottom:20px}

/* end text.css */

/* 960.css */

.container_12,.container_16{margin-left:auto;margin-right:auto;width:960px}.grid_1,.grid_2,.grid_3,.grid_4,.grid_5,.grid_6,.grid_7,.grid_8,.grid_9,.grid_10,.grid_11,.grid_12,.grid_13,.grid_14,.grid_15,.grid_16{display:inline;float:left;margin-left:10px;margin-right:10px}.container_12 .grid_3,.container_16 .grid_4{width:220px}.container_12 .grid_6,.container_16 .grid_8{width:460px}.container_12 .grid_9,.container_16 .grid_12{width:700px}.container_12 .grid_12,.container_16 .grid_16{width:940px}.alpha{margin-left:0}.omega{margin-right:0}.container_12 .grid_1{width:60px}.container_12 .grid_2{width:140px}.container_12 .grid_4{width:300px}.container_12 .grid_5{width:380px}.container_12 .grid_7{width:540px}.container_12 .grid_8{width:620px}.container_12 .grid_10{width:780px}.container_12 .grid_11{width:860px}.container_16 .grid_1{width:40px}.container_16 .grid_2{width:100px}.container_16 .grid_3{width:160px}.container_16 .grid_5{width:280px}.container_16 .grid_6{width:340px}.container_16 .grid_7{width:400px}.container_16 .grid_9{width:520px}.container_16 .grid_10{width:580px}.container_16 .grid_11{width:640px}.container_16 .grid_13{width:760px}.container_16 .grid_14{width:820px}.container_16 .grid_15{width:880px}.container_12 .prefix_3,.container_16 .prefix_4{padding-left:240px}.container_12 .prefix_6,.container_16 .prefix_8{padding-left:480px}.container_12 .prefix_9,.container_16 .prefix_12{padding-left:720px}.container_12 .prefix_1{padding-left:80px}.container_12 .prefix_2{padding-left:160px}.container_12 .prefix_4{padding-left:320px}.container_12 .prefix_5{padding-left:400px}.container_12 .prefix_7{padding-left:560px}.container_12 .prefix_8{padding-left:640px}.container_12 .prefix_10{padding-left:800px}.container_12 .prefix_11{padding-left:880px}.container_16 .prefix_1{padding-left:60px}.container_16 .prefix_2{padding-left:120px}.container_16 .prefix_3{padding-left:180px}.container_16 .prefix_5{padding-left:300px}.container_16 .prefix_6{padding-left:360px}.container_16 .prefix_7{padding-left:420px}.container_16 .prefix_9{padding-left:540px}.container_16 .prefix_10{padding-left:600px}.container_16 .prefix_11{padding-left:660px}.container_16 .prefix_13{padding-left:780px}.container_16 .prefix_14{padding-left:840px}.container_16 .prefix_15{padding-left:900px}.container_12 .suffix_3,.container_16 .suffix_4{padding-right:240px}.container_12 .suffix_6,.container_16 .suffix_8{padding-right:480px}.container_12 .suffix_9,.container_16 .suffix_12{padding-right:720px}.container_12 .suffix_1{padding-right:80px}.container_12 .suffix_2{padding-right:160px}.container_12 .suffix_4{padding-right:320px}.container_12 .suffix_5{padding-right:400px}.container_12 .suffix_7{padding-right:560px}.container_12 .suffix_8{padding-right:640px}.container_12 .suffix_10{padding-right:800px}.container_12 .suffix_11{padding-right:880px}.container_16 .suffix_1{padding-right:60px}.container_16 .suffix_2{padding-right:120px}.container_16 .suffix_3{padding-right:180px}.container_16 .suffix_5{padding-right:300px}.container_16 .suffix_6{padding-right:360px}.container_16 .suffix_7{padding-right:420px}.container_16 .suffix_9{padding-right:540px}.container_16 .suffix_10{padding-right:600px}.container_16 .suffix_11{padding-right:660px}.container_16 .suffix_13{padding-right:780px}.container_16 .suffix_14{padding-right:840px}.container_16 .suffix_15{padding-right:900px}.clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0}.clearfix:after{clear:both;content:' ';display:block;font-size:0;line-height:0;visibility:hidden;width:0;height:0}.clearfix{display:inline-block}* html .clearfix{height:1%}.clearfix{display:block}

/* end 960.css */

.spacer {
  height: 20px;
}

.right {
  text-align: right;
}

.left {
  text-align: left;
}

.fleft {
  float: left;
}

.fright {
  float: right;
}

.center {
  text-align: center;
}

.showgrid {
  background: #fff url(/images/12_col.gif) repeat-y;
}

html {
  background-color: #252625;
  color: #a69b03;
}

body a {
  color: #a69b03;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

.content {
  background-color: #7da5a5;
  color: #593202;
}

.content a {
  color: #593202;
}

.border {
  margin: 10px;
}

.post-title {
  margin-bottom: 0px;
}

hr.end {
  margin-bottom: 5px;
}

#top-title h1 {
  margin-bottom: 0px;
}

.date {
  margin-top: 10px;
  text-decoration: underline;
  text-transform: uppercase;
}

.leftbar * {
  margin-bottom: 0px;
}

#toppanel-extras ul {
  list-style-type: square;
}

#toppanel-extras div {
  overflow: hidden;
}

ul#nav-menu {
  list-style-image: none;
  list-style-position: outside;
  list-style-type: none;
  margin-top: 0px;
  margin-bottom: 0px;
  border: solid #252625 5px;
}

ul#nav-menu li {
  display: inline;
  margin-left: 10px;
  margin-right: 10px;
}

ul#nav-menu li a {
  color: #a69b03;
}

#right-sidebar ul {
  list-style-image: none;
  list-style-position: outside;
  list-style-type: none;
}

#right-sidebar ul li {
  display: block;
  margin-left: 0px;
}

input#s {
  width: 130px;
}

.entry a {
  text-decoration: underline;
  padding: 2px;
}

.entry a:hover {
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  border-radius: 2px;
  background-color: #252625;
  color: #a69b03;
}

blockquote {
  background-color: #252625;
  color: #a69b03;
  margin: 0px auto;
  padding: 5px;
  width: 80%;
}

#footer {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 35px;
  clear: both;
  margin-top: -35px;
  background: #252625;
}

#main-content {
  padding-bottom: 35px;
}

body > #main-content {
  height: auto;
  min-height: 100%;
}

img.alignright {
  float: right;
  margin-left: 5px;
}

img.pimg {
  width: 100%;
}

.tag1 {
  font-size: 10px;
}

.tag2 {
  font-size: 12px;
}

.tag3 {
  font-size: 16px;
}

.tag4 {
  font-size: 20px;
}

.tag5 {
  font-size: 24px;
}

.form {
  margin: 0 auto;
  width: 600px;
}

.form input.max {
  width: 600px;
}

.form textarea {
  width: 600px;
  height: 350px;
}

